--- a/index.html
+++ b/index.html
@@ -13,64 +13,71 @@
     <p id="title_name" onclick="Title_Animation()" onmouseover="Title_Animation()">Wout C.</p>
     <ul id="nav">
     <li><a href="#">Projects</a></li>
-    <li><a href="#">Social Links</a></li>
+    <li> - </li>
+    <li>Social Links:</li>
+    <li><a href="https://github.com/woutcorijn">Github</a></li>
+    <li><a href="https://www.instagram.com/woutcorijn/">Instagram</a></li>
+    <li><a href="https://open.spotify.com/user/woutco">Spotify</a></li>
+    <li><a href="https://twitter.com/WoutCorijn">Twitter</a></li>
+    <li><a href="https://www.youtube.com/woutcorijn">Youtube</a></li>
+    <li><a href="https://steamcommunity.com/id/woutco">Steam</a></li>
   </ul>
 </div>
   <div id="Content">
   <p class="Heading_1">Projects</p>
   <div class="left">
     <p class="Heading_2"><a href="https://www.kljaalter.be/" target="_blank">kljaalter.be</a></p>
-    <p class="Date">Description</p>
+    <p class="Date"></p>
     <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
 </div>
 
   <div class="right">
   <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
-  <p class="Date">Description</p>
+  <p class="Date">29/10/2019</p>
   <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/samcorijn.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
   <p class="Heading_2"><a href="https://www.harpg.ga/" target="_blank">harpg.ga</a></p>
-  <p class="Date">Home Appliance RPG</p>
+  <p class="Date">Home Appliance RPG.</p>
   <a href="https://www.harpg.ga/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
   <p class="Heading_2"><a href="https://www.soulandstuffband.cf/" target="_blank">soulandstuffband.cf</a></p>
-  <p class="Date">Description</p>
+  <p class="Date"></p>
   <a href="https://www.soulandstuffband.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
   <p class="Heading_2"><a href="http://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
-  <p class="Date">Description</p>
+  <p class="Date">A random card generator and selector.</p>
   <a href="http://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
   <p class="Heading_2"><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">rotatingpotatobrowser.ga</a></p>
-  <p class="Date">Description</p>
+  <p class="Date"></p>
   <a href="https://www.rotatingpotatobrowser.ga/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
   <p class="Heading_2"><a href="https://cryptocoins.woutcorijn.com/" target="_blank">cryptocoins.woutcorijn.com</a></p>
-  <p class="Date">Description</p>
+  <p class="Date">cryptocurrency game.</p>
   <a href="https://cryptocoins.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/cryptocoins.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
   <p class="Heading_2"><a href="http://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
-  <p class="Date">Description</p>
+  <p class="Date">Random patern generator with 9 lines.</p>
   <a href="http://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
   <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
-  <p class="Date">24/03/2018
-  <br>
-  This is a fake site I created when Fortnite was</p>
+  <p class="Date">
+  24/03/2018<br>
+  This is a fake site I created in the time Fortnite was a big hype.</p>
   <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
