--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css"></link>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.png">
 </head>
 <body onload="Title_Animation()">
   <div id="header_border"></div>
@@ -12,15 +13,15 @@
     <div id="header">
     <p id="title_name" onclick="Title_Animation()" onmouseover="Title_Animation()">Wout C.</p>
     <ul id="nav">
-    <li><a href="#">Projects</a></li>
+    <li><a href="https://woutcorijn.com/">Projects</a></li>
     <li> - </li>
     <li>Social Links:</li>
-    <li><a href="https://github.com/woutcorijn">Github</a></li>
-    <li><a href="https://www.instagram.com/woutcorijn/">Instagram</a></li>
-    <li><a href="https://open.spotify.com/user/woutco">Spotify</a></li>
-    <li><a href="https://twitter.com/WoutCorijn">Twitter</a></li>
-    <li><a href="https://www.youtube.com/woutcorijn">Youtube</a></li>
-    <li><a href="https://steamcommunity.com/id/woutco">Steam</a></li>
+    <li><a href="https://github.com/woutcorijn" target="_blank">Github</a></li>
+    <li><a href="https://www.instagram.com/woutcorijn/" target="_blank">Instagram</a></li>
+    <li><a href="https://open.spotify.com/user/woutco" target="_blank">Spotify</a></li>
+    <li><a href="https://twitter.com/WoutCorijn" target="_blank">Twitter</a></li>
+    <li><a href="https://www.youtube.com/woutcorijn" target="_blank">Youtube</a></li>
+    <li><a href="https://steamcommunity.com/id/woutco" target="_blank">Steam</a></li>
   </ul>
 </div>
   <div id="Content">
