--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
   <p class="Date">
   24/03/2018<br>
-  This is a fake site I created in the time Fortnite was a big hype.</p>
+  This is a fake site that I have created when Fortnite was a big hype.</p>
   <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
