--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 </div>
   <div id="Content">
   <p class="Heading_1">Projects</p>
+  <p class="note">All projects on <a target="_blank" href="https://github.com/woutcorijn">https://github.com/woutcorijn</a></p>
+  <br>
+
   <div class="left">
     <p class="Heading_2"><a href="https://www.kljaalter.be/" target="_blank">kljaalter.be</a></p>
     <p class="Date"></p>
@@ -42,48 +45,60 @@
 </div>
 
   <div class="right">
+    <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Random-Laugh-Track</a></p>
+    <p class="Date">12/11/2020</p>
+<a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Random-Laugh-Track.svg" class="Project_img"></img></a>
+</div>
+
+<div class="right">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/text-based-space-game" target="_blank">text-based-space-game</a></p>
+  <p class="Date">24/02/2019</p>
+<a href="https://github.com/woutcorijn/text-based-space-game" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/text-based-space-game.svg" class="Project_img"></img></a>
+</div>
+
+  <div class="left">
   <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
   <p class="Date">29/10/2019</p>
   <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/samcorijn.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://www.harpg.ga/" target="_blank">harpg.ga</a></p>
   <p class="Date">Home Appliance RPG.</p>
   <a href="https://www.harpg.ga/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://www.soulandstuffband.cf/" target="_blank">soulandstuffband.cf</a></p>
   <p class="Date"></p>
   <a href="https://www.soulandstuffband.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="http://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
   <p class="Date">A random card generator and selector.</p>
   <a href="http://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">rotatingpotatobrowser.ga</a></p>
   <p class="Date"></p>
   <a href="https://www.rotatingpotatobrowser.ga/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://cryptocoins.woutcorijn.com/" target="_blank">cryptocoins.woutcorijn.com</a></p>
   <p class="Date">cryptocurrency game.</p>
   <a href="https://cryptocoins.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/cryptocoins.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="http://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
   <p class="Date">Random patern generator with 9 lines.</p>
   <a href="http://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
   <p class="Date">
   24/03/2018<br>
@@ -91,7 +106,7 @@
   <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://gifsfordays.tk/" target="_blank">gifsfordays.tk</a></p>
   <p class="Date">02/05/2017</p>
   <a href="https://gifsfordays.tk/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
