--- a/index.html
+++ b/index.html
@@ -93,12 +93,18 @@
   </div>
 
   <div class="left">
+  <p class="Heading_2"><a href="https://www.refrigeratorsimulator.ga/" target="_blank">www.refrigeratorsimulator.ga</a></p>
+  <p class="Date">A refrigerator simulator.</p>
+  <a href="https://www.refrigeratorsimulator.ga/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="left">
   <p class="Heading_2"><a href="http://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
   <p class="Date">Random patern generator with 9 lines.</p>
   <a href="http://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
   <p class="Date">
   24/03/2018<br>
@@ -106,7 +112,7 @@
   <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://gifsfordays.tk/" target="_blank">gifsfordays.tk</a></p>
   <p class="Date">02/05/2017</p>
   <a href="https://gifsfordays.tk/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
