--- a/index.html
+++ b/index.html
@@ -44,10 +44,22 @@
     <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
 </div>
 
-  <div class="right">
-    <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Random-Laugh-Track</a></p>
-    <p class="Date">12/11/2020</p>
+<div class="right">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Random-Laugh-Track</a></p>
+  <p class="Date">12/11/2020</p>
 <a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Random-Laugh-Track.svg" class="Project_img"></img></a>
+</div>
+
+<div class="right">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank">Solar-Tracker</a></p>
+  <p class="Date">22/12/2020</p>
+<a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
+</div>
+
+<div class="left">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
+  <p class="Date">21/03/2021</p>
+<a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
 </div>
 
 <div class="right">
