--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
   <div class="right">
   <p class="Heading_2"><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">rotatingpotatobrowser.ga</a></p>
-  <p class="Date"></p>
+  <p class="Date">
+  26/03/2018 <b>(Archived)</b><br>
   <a href="https://www.rotatingpotatobrowser.ga/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
@@ -112,21 +113,23 @@
 
   <div class="left">
   <p class="Heading_2"><a href="http://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
-  <p class="Date">Random patern generator with 9 lines.</p>
+  <p class="Date">
+  10/06/2018 <b>(Archived)</b><br>
+  Random patern generator with 9 lines.</p>
   <a href="http://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
   <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
   <p class="Date">
-  24/03/2018<br>
+  24/03/2018 <b>(Archived)</b><br>
   This is a fake site that I have created when Fortnite was a big hype.</p>
   <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
   <p class="Heading_2"><a href="https://gifsfordays.tk/" target="_blank">gifsfordays.tk</a></p>
-  <p class="Date">02/05/2017</p>
+  <p class="Date">02/05/2017 <b>(Archived)</b></p>
   <a href="https://gifsfordays.tk/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
   </div>
   </div>
