--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="https://www.soulandstuffband.cf/" target="_blank">soulandstuffband.cf</a></p>
+  <p class="Heading_2"><a href="https://www.soulandstuff.cf/" target="_blank">soulandstuff.cf</a></p>
   <p class="Date"></p>
-  <a href="https://www.soulandstuffband.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
+  <a href="https://www.soulandstuff.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
@@ -93,10 +93,10 @@
   </div>
 
   <div class="right">
-  <p class="Heading_2"><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">rotatingpotatobrowser.ga</a></p>
+  <p class="Heading_2"><a href="http://rotatingpotatobrowser.woutcorijn.com//" target="_blank">Rotatingpotatobrowser</a></p>
   <p class="Date">
   26/03/2018 <b>(Archived)</b><br>
-  <a href="https://www.rotatingpotatobrowser.ga/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
+  <a href="http://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
@@ -106,9 +106,9 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="https://www.refrigeratorsimulator.ga/" target="_blank">www.refrigeratorsimulator.ga</a></p>
+  <p class="Heading_2"><a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank">www.refrigeratorsimulator.ga</a></p>
   <p class="Date">A refrigerator simulator.</p>
-  <a href="https://www.refrigeratorsimulator.ga/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
+  <a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
@@ -128,9 +128,9 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="https://gifsfordays.tk/" target="_blank">gifsfordays.tk</a></p>
+  <p class="Heading_2"><a href="http://gifsfordays.woutcorijn.com/" target="_blank">gifsfordays.tk</a></p>
   <p class="Date">02/05/2017 <b>(Archived)</b></p>
-  <a href="https://gifsfordays.tk/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
+  <a href="http://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
   </div>
   </div>
 </div>
