--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank">www.refrigeratorsimulator.ga</a></p>
+  <p class="Heading_2"><a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
   <p class="Date">A refrigerator simulator.</p>
   <a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
   </div>
@@ -128,7 +128,7 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="http://gifsfordays.woutcorijn.com/" target="_blank">gifsfordays.tk</a></p>
+  <p class="Heading_2"><a href="http://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>
   <p class="Date">02/05/2017 <b>(Archived)</b></p>
   <a href="http://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
   </div>
