--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="http://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
+  <p class="Heading_2"><a href="https://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
   <p class="Date">A random card generator and selector.</p>
-  <a href="http://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
+  <a href="https://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
-  <p class="Heading_2"><a href="http://rotatingpotatobrowser.woutcorijn.com//" target="_blank">Rotatingpotatobrowser</a></p>
+  <p class="Heading_2"><a href="https://rotatingpotatobrowser.woutcorijn.com//" target="_blank">Rotatingpotatobrowser</a></p>
   <p class="Date">
   26/03/2018 <b>(Archived)</b><br>
-  <a href="http://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
+  <a href="https://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
@@ -106,35 +106,35 @@
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
+  <p class="Heading_2"><a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
   <p class="Date">A refrigerator simulator.</p>
-  <a href="http://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
+  <a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="http://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
+  <p class="Heading_2"><a href="https://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
   <p class="Date">
   10/06/2018 <b>(Archived)</b><br>
   Random patern generator with 9 lines.</p>
-  <a href="http://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
+  <a href="https://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
-  <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
+  <p class="Heading_2"><a href="https://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
   <p class="Date">
   24/03/2018 <b>(Archived)</b><br>
   This is a fake site that I have created when Fortnite was a big hype.</p>
-  <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
+  <a href="https://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="http://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>
+  <p class="Heading_2"><a href="https://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>
   <p class="Date">02/05/2017 <b>(Archived)</b></p>
-  <a href="http://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
+  <a href="https://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
   </div>
   </div>
 </div>
 </body>
 </html>
 <script src="script.js"></script>
-<script src="http://localhost:35729/livereload.js"></script>
+<!--<script src="http://localhost:35729/livereload.js"></script>-->
