--- a/index.html
+++ b/index.html
@@ -38,10 +38,22 @@
   <p class="note">All projects on <a target="_blank" href="https://github.com/woutcorijn">https://github.com/woutcorijn</a></p>
   <br>
 
-  <div class="left">
-    <p class="Heading_2"><a href="https://www.kljaalter.be/" target="_blank">kljaalter.be</a></p>
-    <p class="Date"></p>
-    <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
+<div class="left">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Voltmeter-Clock</a></p>
+  <p class="Date">13/08/2021</p>
+<a href="https://github.com/woutcorijn/Voltmeter-Clock" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Voltmeter-Clock.svg" class="Project_img"></img></a>
+</div>
+
+<div class="right">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
+  <p class="Date">21/03/2021</p>
+<a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
+</div>
+
+<div class="left">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank">Solar-Tracker</a></p>
+  <p class="Date">22/12/2020</p>
+<a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
 </div>
 
 <div class="right">
@@ -50,16 +62,10 @@
 <a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Random-Laugh-Track.svg" class="Project_img"></img></a>
 </div>
 
-<div class="right">
-  <p class="Heading_2"><a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank">Solar-Tracker</a></p>
-  <p class="Date">22/12/2020</p>
-<a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
-</div>
-
 <div class="left">
-  <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
-  <p class="Date">21/03/2021</p>
-<a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
+  <p class="Heading_2"><a href="https://www.kljaalter.be/" target="_blank">kljaalter.be</a></p>
+  <p class="Date"></p>
+  <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
 </div>
 
 <div class="right">
@@ -68,50 +74,50 @@
 <a href="https://github.com/woutcorijn/text-based-space-game" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/text-based-space-game.svg" class="Project_img"></img></a>
 </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
   <p class="Date">29/10/2019</p>
   <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/samcorijn.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://www.harpg.ga/" target="_blank">harpg.ga</a></p>
   <p class="Date">Home Appliance RPG.</p>
   <a href="https://www.harpg.ga/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://www.soulandstuff.cf/" target="_blank">soulandstuff.cf</a></p>
   <p class="Date"></p>
   <a href="https://www.soulandstuff.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
   <p class="Date">A random card generator and selector.</p>
   <a href="https://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://rotatingpotatobrowser.woutcorijn.com//" target="_blank">Rotatingpotatobrowser</a></p>
   <p class="Date">
   26/03/2018 <b>(Archived)</b><br>
   <a href="https://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://cryptocoins.woutcorijn.com/" target="_blank">cryptocoins.woutcorijn.com</a></p>
   <p class="Date">cryptocurrency game.</p>
   <a href="https://cryptocoins.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/cryptocoins.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
   <p class="Date">A refrigerator simulator.</p>
   <a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
   <p class="Date">
   10/06/2018 <b>(Archived)</b><br>
@@ -119,7 +125,7 @@
   <a href="https://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
   <p class="Date">
   24/03/2018 <b>(Archived)</b><br>
@@ -127,7 +133,7 @@
   <a href="https://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>
   <p class="Date">02/05/2017 <b>(Archived)</b></p>
   <a href="https://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
