--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
 </div>
 
-<div class="right">
+<!-- <div class="right">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/text-based-space-game" target="_blank">text-based-space-game</a></p>
   <p class="Date">24/02/2019</p>
 <a href="https://github.com/woutcorijn/text-based-space-game" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/text-based-space-game.svg" class="Project_img"></img></a>
-</div>
+</div> -->
 
   <div class="right">
   <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
