--- a/index.html
+++ b/index.html
@@ -38,19 +38,25 @@
   <p class="note">All projects on <a target="_blank" href="https://github.com/woutcorijn">https://github.com/woutcorijn</a></p>
   <br>
 
-<div class="left">
+<div class="right">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Voltmeter-Clock</a></p>
   <p class="Date">13/08/2021</p>
 <a href="https://github.com/woutcorijn/Voltmeter-Clock" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Voltmeter-Clock.svg" class="Project_img"></img></a>
 </div>
 
-<div class="right">
+<div class="left">
+  <p class="Heading_2"><a href="https://github.com/woutcorijn/EpicTimeTravelGame" target="_blank">EpicTimeTravelGame</a></p>
+  <p class="Date">12/12/2022</p>
+<a href="https://github.com/woutcorijn/EpicTimeTravelGame" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/EpicTimeTravelGame.svg" class="Project_img"></img></a>
+</div>
+
+<div class="left">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
   <p class="Date">21/03/2021</p>
 <a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
 </div>
 
-<div class="left">
+<div class="right">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank">Solar-Tracker</a></p>
   <p class="Date">22/12/2020</p>
 <a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
@@ -87,12 +93,6 @@
   </div>
 
   <div class="right">
-  <p class="Heading_2"><a href="https://www.soulandstuff.cf/" target="_blank">soulandstuff.cf</a></p>
-  <p class="Date"></p>
-  <a href="https://www.soulandstuff.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
-  </div>
-
-  <div class="right">
   <p class="Heading_2"><a href="https://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
   <p class="Date">A random card generator and selector.</p>
   <a href="https://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
@@ -105,19 +105,19 @@
   <a href="https://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
   </div>
 
-  <div class="left">
+  <div class="right">
   <p class="Heading_2"><a href="https://cryptocoins.woutcorijn.com/" target="_blank">cryptocoins.woutcorijn.com</a></p>
   <p class="Date">cryptocurrency game.</p>
   <a href="https://cryptocoins.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/cryptocoins.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
   <p class="Date">A refrigerator simulator.</p>
   <a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
   </div>
 
-  <div class="right">
+  <div class="left">
   <p class="Heading_2"><a href="https://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
   <p class="Date">
   10/06/2018 <b>(Archived)</b><br>
