--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
 
 <div class="right">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Voltmeter-Clock</a></p>
-  <p class="Date">13/08/2021</p>
+  <p class="Date">2021-08-13</p>
 <a href="https://github.com/woutcorijn/Voltmeter-Clock" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Voltmeter-Clock.svg" class="Project_img"></img></a>
 </div>
 
 <div class="left">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/EpicTimeTravelGame" target="_blank">EpicTimeTravelGame</a></p>
-  <p class="Date">12/12/2022</p>
+  <p class="Date">2022-12-12</p>
 <a href="https://github.com/woutcorijn/EpicTimeTravelGame" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/EpicTimeTravelGame.svg" class="Project_img"></img></a>
 </div>
 
 <div class="left">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
-  <p class="Date">21/03/2021</p>
+  <p class="Date">2021-03-21</p>
 <a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
 </div>
 
 <div class="right">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank">Solar-Tracker</a></p>
-  <p class="Date">22/12/2020</p>
+  <p class="Date">2020-12-22</p>
 <a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
 </div>
 
 <div class="right">
   <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Random-Laugh-Track</a></p>
-  <p class="Date">12/11/2020</p>
+  <p class="Date">2020-11-12</p>
 <a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Random-Laugh-Track.svg" class="Project_img"></img></a>
 </div>
 
@@ -82,14 +82,14 @@
 
   <div class="right">
   <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
-  <p class="Date">29/10/2019</p>
+  <p class="Date">2019-10-29</p>
   <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/samcorijn.png" class="Project_img"></img></a>
   </div>
 
   <div class="left">
-  <p class="Heading_2"><a href="https://www.harpg.ga/" target="_blank">harpg.ga</a></p>
-  <p class="Date">Home Appliance RPG.</p>
-  <a href="https://www.harpg.ga/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
+  <p class="Heading_2"><a href="http://harpg.woutcorijn.com/" target="_blank">Home Appliance RPG</a></p>
+  <p class="Date">2018-10-22</p>
+  <a href="http://harpg.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
   </div>
 
   <div class="right">
@@ -135,7 +135,7 @@
 
   <div class="right">
   <p class="Heading_2"><a href="https://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>
-  <p class="Date">02/05/2017 <b>(Archived)</b></p>
+  <p class="Date">2017-05-02 <b>(Archived)</b></p>
   <a href="https://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
   </div>
   </div>
