--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 
     <div id="flexContainer">
       <div>
+        <p class="Heading_2">Epic Time Travel Game</p>
+        <p class="Date">2023 <br>
+        Ingenieursbeleving 2 Elektronica-ICT KU Leuven <br>
+        Raycasting game</p>
+        <img class="Project_img" src="images/site_screenshot/EpicTimeTravelGame.webp" />
+      </div>
+
+      <div>
         <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Voltmeter-Clock</a></p>
         <p class="Date">2021-08-13</p>
       <a href="https://github.com/woutcorijn/Voltmeter-Clock" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Voltmeter-Clock.svg" class="Project_img"></img></a>
