--- a/index.html
+++ b/index.html
@@ -48,21 +48,22 @@
       </div>
 
       <div>
-        <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Voltmeter-Clock</a></p>
-        <p class="Date">2021-08-13</p>
-      <a href="https://github.com/woutcorijn/Voltmeter-Clock" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Voltmeter-Clock.svg" class="Project_img"></img></a>
+        <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
+        <p class="Date">2021-03-21</p>
+        <a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
       </div>
 
       <div>
-        <p class="Heading_2"><a href="https://github.com/woutcorijn/DMX_Controller" target="_blank">DMX_Controller</a></p>
-        <p class="Date">2021-03-21</p>
-      <a href="https://github.com/woutcorijn/DMX_Controller" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/DMX_Controller.svg" class="Project_img"></img></a>
+        <p class="Heading_2"><a href="https://github.com/woutcorijn/Random-Laugh-Track" target="_blank">Voltmeter-Clock</a></p>
+        <p class="Date">2021-08-13</p>
+        <a href="https://github.com/woutcorijn/Voltmeter-Clock" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Voltmeter-Clock.svg" class="Project_img"></img></a>
       </div>
 
       <div>
         <p class="Heading_2"><a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank">Solar-Tracker</a></p>
-        <p class="Date">2020-12-22</p>
-      <a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
+        <p class="Date">2020 - 2021<br>
+          GIP Elektromechanica</p>
+        <a href="https://github.com/woutcorijn/Solar-Tracker" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/Solar-Tracker.svg" class="Project_img"></img></a>
       </div>
 
       <div>
@@ -77,17 +78,23 @@
         <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
       </div>
 
-      <!-- <div class="right">
+      <div>
+        <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
+        <p class="Date">2019-10-29</p>
+        <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/samcorijn.png" class="Project_img"></img></a>
+      </div>
+
+      <div>
+        <p class="Heading_2"><a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
+        <p class="Date">A refrigerator simulator.</p>
+        <a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
+      </div>
+
+      <!-- <div>
         <p class="Heading_2"><a href="https://github.com/woutcorijn/text-based-space-game" target="_blank">text-based-space-game</a></p>
         <p class="Date">24/02/2019</p>
       <a href="https://github.com/woutcorijn/text-based-space-game" target="_blank"><img src="https://gh-card.dev/repos/woutcorijn/text-based-space-game.svg" class="Project_img"></img></a>
       </div> -->
-
-        <div>
-        <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
-        <p class="Date">2019-10-29</p>
-        <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/samcorijn.png" class="Project_img"></img></a>
-        </div>
 
         <div>
         <p class="Heading_2"><a href="http://harpg.woutcorijn.com/" target="_blank">Home Appliance RPG</a></p>
@@ -95,38 +102,32 @@
         <a href="http://harpg.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
         </div>
 
-        <div>
-        <p class="Heading_2"><a href="https://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
-        <p class="Date">A random card generator and selector.</p>
-        <a href="https://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
-        </div>
+<!--        <div>-->
+<!--        <p class="Heading_2"><a href="https://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>-->
+<!--        <p class="Date">A random card generator and selector.</p>-->
+<!--        <a href="https://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>-->
+<!--        </div>-->
 
-        <div>
-        <p class="Heading_2"><a href="https://rotatingpotatobrowser.woutcorijn.com//" target="_blank">Rotatingpotatobrowser</a></p>
-        <p class="Date">
-        26/03/2018 <b>(Archived)</b><br>
-        <a href="https://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
-        </div>
+<!--        <div>-->
+<!--        <p class="Heading_2"><a href="https://rotatingpotatobrowser.woutcorijn.com//" target="_blank">Rotatingpotatobrowser</a></p>-->
+<!--        <p class="Date">-->
+<!--        26/03/2018 <b>(Archived)</b><br>-->
+<!--        <a href="https://rotatingpotatobrowser.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>-->
+<!--        </div>-->
 
-        <div>
-        <p class="Heading_2"><a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank">Refrigeratorsimulator</a></p>
-        <p class="Date">A refrigerator simulator.</p>
-        <a href="https://refrigeratorsimulator.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/refrigeratorsimulator.png" class="Project_img"></img></a>
-        </div>
+<!--        <div>-->
+<!--        <p class="Heading_2"><a href="https://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>-->
+<!--        <p class="Date">-->
+<!--        10/06/2018 <b>(Archived)</b><br>-->
+<!--        Random patern generator with 9 lines.</p>-->
+<!--        <a href="https://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>-->
+<!--        </div>-->
 
-        <div>
-        <p class="Heading_2"><a href="https://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
-        <p class="Date">
-        10/06/2018 <b>(Archived)</b><br>
-        Random patern generator with 9 lines.</p>
-        <a href="https://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
-        </div>
-
-      <div>
-        <p class="Heading_2"><a href="https://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>
-        <p class="Date">2017-05-02 <b>(Archived)</b></p>
-        <a href="https://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
-      </div>
+<!--      <div>-->
+<!--        <p class="Heading_2"><a href="https://gifsfordays.woutcorijn.com/" target="_blank">Gifsfordays</a></p>-->
+<!--        <p class="Date">2017-05-02 <b>(Archived)</b></p>-->
+<!--        <a href="https://gifsfordays.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>-->
+<!--      </div>-->
 
       <div>
         <p class="Heading_2"><a href="https://cryptocoins.woutcorijn.com/" target="_blank">cryptocoins.woutcorijn.com</a></p>
@@ -135,13 +136,13 @@
       </div>
 
 
-      <div>
-        <p class="Heading_2"><a href="https://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
-        <p class="Date">
-        24/03/2018 <b>(Archived)</b><br>
-        This is a fake site that I have created when Fortnite was a big hype.</p>
-        <a href="https://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
-        </div>
+<!--      <div>-->
+<!--        <p class="Heading_2"><a href="https://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>-->
+<!--        <p class="Date">-->
+<!--        24/03/2018 <b>(Archived)</b><br>-->
+<!--        This is a fake site that I have created when Fortnite was a big hype.</p>-->
+<!--        <a href="https://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>-->
+<!--        </div>-->
     </div>
   </div>
 </div>
