--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <li><a href="https://github.com/woutcorijn" target="_blank">Github</a></li>
     <li><a href="https://www.instagram.com/woutcorijn/" target="_blank">Instagram</a></li>
     <li><a href="https://open.spotify.com/user/woutco" target="_blank">Spotify</a></li>
-    <li><a href="https://twitter.com/WoutCorijn" target="_blank">Twitter</a></li>
-    <li><a href="https://www.youtube.com/woutcorijn" target="_blank">Youtube</a></li>
-    <li><a href="https://steamcommunity.com/id/woutco" target="_blank">Steam</a></li>
+<!--    <li><a href="https://twitter.com/WoutCorijn" target="_blank">Twitter</a></li>-->
+<!--    <li><a href="https://www.youtube.com/woutcorijn" target="_blank">Youtube</a></li>-->
+<!--    <li><a href="https://steamcommunity.com/id/woutco" target="_blank">Steam</a></li>-->
   </ul>
 </div>
   <div id="Content">
