--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
         <p class="Heading_2">Epic Time Travel Game</p>
         <p class="Date">2023 <br>
         Ingenieursbeleving 2 Elektronica-ICT KU Leuven <br>
-        Raycasting game</p>
-        <img class="Project_img" src="images/site_screenshot/EpicTimeTravelGame.webp" />
+        Raycasting game<br><br>
+
+        Wout Corijn / Leon Cherchye</p>
+        <a href="https://www.youtube.com/shorts/637qtiLsWDQ" target="_blank"><img class="Project_img" src="images/site_screenshot/EpicTimeTravelGame.webp" /></a>
       </div>
 
       <div>
